hero: fix animation on safari

--- a/src/components/hero/styles.module.css
+++ b/src/components/hero/styles.module.css
@@ -31,7 +31,6 @@
 }
 
 .hero {
-  transform: translateY(0px) scale(1);
   opacity: 1;
   transition: opacity, transform;
   will-change: opacity, transform;
@@ -39,38 +38,50 @@
   animation: hero-fade-out linear both;
   animation-timeline: view(block);
   animation-range: contain 0% exit 100%;
+  opacity: 1;
+  transform: scale(1);
+  -webkit-transform: scale(1);
 }
 
 @keyframes rolling-text {
   0% {
     transform: translateY(0rem);
+    -webkit-transform: translateY(0rem);
   }
   15% {
     transform: translateY(-2.25rem);
+    -webkit-transform: translateY(-2.25rem);
   }
   30% {
     transform: translateY(-4.5rem);
+    -webkit-transform: translateY(-4.5rem);
   }
   45% {
     transform: translateY(-6.75rem);
+    -webkit-transform: translateY(-6.75rem);
   }
   60% {
     transform: translateY(-9rem);
+    -webkit-transform: translateY(-9rem);
   }
   75% {
     transform: translateY(-11.25rem);
+    -webkit-transform: translateY(-11.25rem);
   }
   100% {
     transform: translateY(-13.5rem);
+    -webkit-transform: translateY(-13.5rem);
   }
 }
 
 @keyframes marquee-horizonal {
   0% {
     transform: translateX(0) translateZ(0);
+    -webkit-transform: translateX(0) translateZ(0);
   }
   100% {
     transform: translateX(-100%) translateZ(0);
+    -webkit-transform: translateX(-100%) translateZ(0);
   }
 }
 
@@ -93,13 +104,16 @@
   0% {
     opacity: 1;
     transform: scale(1);
+    -webkit-transform: scale(1);
   }
   70% {
     transform: scale(0.8);
+    -webkit-transform: scale(0.8);
     opacity: 0;
   }
   100% {
     opacity: 0;
+    -webkit-transform: scale(0.8);
     transform: scale(0.8);
   }
 }
